# machine-learning

./: README.md  pyproject.toml
notebooks/: 1. Fundamentos de Machine Learning.ipynb  2. Regularización.ipynb  3 Selección de características.ipynb  3.1 Ayuda para la práctica_ análisis exploratorio.ipynb  5. Bagging y Random Forest.ipynb  6. Boosted Trees.ipynb  6.1 Boosting - Otras implementaciones.ipynb  7. SVMs y Métodos Kernel.ipynb
notebooks/original/: 2. Regularización.ipynb  4. Árboles de decisión.ipynb  8. Métricas.ipynb  9. Casos prácticos.ipynb
slides/: 0. Presentación y requisitos previos.pptx  2. Regularización.pptx  3. Selección de características.pptx  4. Árboles de decisión.pptx  5. Bagging y Random Forest.pptx  6. Boosted Trees.pptx  7. SVMs y Métodos Kernel.pptx  8. Métricas.pptx
