[tool.poetry]
name = "keepcoding"
version = "0.1.0"
description = ""
authors = ["Ruben <ruromgar@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.2.3"
scikit-learn = "1.6.1"
pandas = "2.2.3"
matplotlib = "3.10.1"
seaborn = "0.13.2"
jupyterlab = "4.3.5"
ipykernel = "6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
